fix: dialog buttons direction on mobile

--- a/src/common/ModalDialog/styles.less
+++ b/src/common/ModalDialog/styles.less
@@ -168,9 +168,11 @@
             z-index: 0;
             padding: 0 1.5rem;
 
-            .buttons-container {
-                flex-direction: column;
-                gap: 1rem;
+            .modal-dialog-content {
+                .buttons-container {
+                    flex-direction: column;
+                    gap: 1rem;
+                }
             }
         }
 
